# soma

./: .changie.yaml  .env  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Cross.toml  LICENSE  MIGRATION_GUIDE.md  Makefile  NOTICE  README.md  SDK_ARCHITECTURE.md  VERSION  about.hbs  about.toml  atlas.hcl  biome.json  install.sh  master.key  openapi-prev.json  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  rust_rusqlite.go.tmpl  soma.yaml  soma.yaml.example  vitest.config.base.ts
crates/a2a/: Cargo.toml  sqlc.yaml
crates/a2a-rs/: Cargo.toml  build.rs
crates/a2a-rs/src/: lib.rs  main.rs  types.rs
crates/a2a-rs/src/agent_execution/: agent_executor.rs  context.rs  mod.rs  request_context_builder.rs  simple_request_context_builder.rs
crates/a2a-rs/src/events/: event_consumer.rs  event_queue.rs  in_memory_queue_manager.rs  mod.rs  queue_manager.rs
crates/a2a-rs/src/request_handlers/: default_request_handler.rs  mod.rs  request_handler.rs
crates/a2a-rs/src/service/: mod.rs
crates/a2a-rs/src/tasks/: base_push_notification_sender.rs  in_memory_push_notification_config_store.rs  in_memory_task_store.rs  manager.rs  push_notification_config_store.rs  push_notification_sender.rs  result_aggregator.rs  store.rs
crates/a2a-rs/types/: a2a.json
crates/a2a/src/: lib.rs  service.rs
crates/a2a/src/logic/: agent.rs  agent_cache.rs  connection_manager.rs  mod.rs  task.rs
crates/a2a/src/repository/: mod.rs
crates/bridge/: Cargo.toml  build.rs  sqlc.yaml  test-kek  test.rs
crates/bridge-macros/: Cargo.toml
crates/bridge-macros/src/: lib.rs
crates/bridge/app/: .gitignore  biome.json  package.json  pnpm-lock.yaml  vite.axum.ts  vite.config.ts
crates/bridge/app/src/: App.tsx  global.css  main.tsx
crates/bridge/migrations/: 0_bridge_init.up.sql  0_init.down.sql  0_init.up.sql
crates/bridge/queries/: provider.sql
crates/bridge/src/: lib.rs  logic.rs  oauth.rs  router.rs  test_helpers.rs
crates/encryption/: Cargo.toml  sqlc.yaml
crates/encryption/src/: lib.rs  router.rs
crates/encryption/test/: test-key
crates/environment/: Cargo.toml  sqlc.yaml
crates/environment/src/: lib.rs  service.rs
crates/gateway/: Cargo.toml  sqlc.yaml
crates/gateway/src/: lib.rs
crates/inbox/: Cargo.toml  sqlc.yaml
crates/inbox-a2a/: Cargo.toml  build.rs  sqlc.yaml
crates/inbox-a2a/src/: events.rs  lib.rs  provider.rs  service.rs  types.rs
crates/inbox-slack/: Cargo.toml
crates/inbox-slack/src/: lib.rs  provider.rs  types.rs
crates/inbox/src/: lib.rs  service.rs
crates/sdk-core/: Cargo.toml  README.md  TYPE_CONVERSIONS.md  UNIX_SOCKET_USAGE.md
crates/sdk-core/src/: lib.rs  types.rs  unix_socket.rs
crates/sdk-js/: Cargo.toml  README.md  biome.json  build.rs  index.d.ts  index.js  package.json  test.rs  tsconfig.json  vitest.config.ts  wasi-worker-browser.mjs
crates/sdk-js/scripts/: build.sh
crates/sdk-js/src/: agents.ts.tera  codegen.rs  codegen_impl.rs  lib.rs  types.rs
crates/sdk-proto/: Cargo.toml  build.rs
crates/sdk-proto/proto/: soma_sdk_service.proto
crates/sdk-proto/src/: lib.rs
crates/sdk-py/: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
crates/sdk-py/src/: agents.py.tera  bridge.py.tera  codegen.rs  codegen_impl.rs  lib copy.rs  lib.rs  main.rs  python.py.tera  types.rs  typescript.ts.tera
crates/sdk-py/trysoma_sdk_core/: __init__.py  __init__.pyi
crates/shared/: Cargo.toml
crates/shared/src/: authz.rs  build_helpers.rs  command.rs  crypto.rs  env.rs  error.rs  identity.rs  lib.rs  libsql.rs  logging.rs  node.rs  port.rs  primitives.rs  process_manager.rs  soma_agent_definition.rs  subsystem.rs  uds.rs
crates/soma/: Cargo.toml  build.rs  sqlc.yaml
crates/soma-api-client/: .gitignore  Cargo.toml  README.md  build.rs
crates/soma-api-client/.openapi-generator/: FILES
crates/soma-api-client/docs/: BridgeConfig.md  BridgeEncryptionConfig.md  BrokerAction.md  BrokerActionOneOf.md  BrokerActionOneOfRedirect.md  BrokerState.md  ConfigurationSchema.md  ConfigurationSchemaItem.md  ContextInfo.md  ContextInfoPaginatedResponse.md  CreateDataEncryptionKeyParams.md  CreateMessageRequest.md  CreateMessageResponse.md  CreateProviderInstanceParamsInner.md  CreateResourceServerCredentialParamsInner.md  CreateUserCredentialParamsInner.md  CredentialConfig.md  DataEncryptionKey.md  DataEncryptionKeyListItem.md  DataEncryptionKeyListItemPaginatedResponse.md  DefaultApi.md  EnableFunctionParamsInner.md  EncryptCredentialConfigurationParamsInner.md  EncryptionConfiguration.md  EnvelopeEncryptionKeyId.md  EnvelopeEncryptionKeyIdOneOf.md  EnvelopeEncryptionKeyIdOneOf1.md  Error.md  FunctionControllerSerialized.md  FunctionInstanceConfig.md  FunctionInstanceConfigPaginatedResponse.md  FunctionInstanceListItem.md  FunctionInstanceSerialized.md  FunctionInstanceSerializedPaginatedResponse.md  InvokeFunctionParamsInner.md  McpApi.md  Message.md  MessagePart.md  MessageRole.md  MessageTaskTimelineItem.md  (+34 more)
crates/soma-api-client/src/: lib.rs
crates/soma-api-server/: Cargo.toml  sqlc.yaml
crates/soma-api-server/src/: a2a.rs  auth.rs  factory.rs  lib.rs  logic.rs  mcp.rs  restate.rs  subsystems.rs
crates/soma-frontend/: Cargo.toml  build.rs
crates/soma-frontend/app/: .cta.json  biome.json  components.json  package.json  tsconfig.json  vite.axum.ts  vite.config.ts
crates/soma-frontend/src/: lib.rs
crates/soma-js/: .gitattributes  Cargo.toml  index.js  package.json  pnpm-lock.yaml
crates/soma/app/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/soma/migrations/: 0_init.down.sql  0_init.up.sql
crates/soma/queries/: task.sql
crates/soma/src/: a2a.rs  bridge_sync.rs  cli.rs  commands.rs  lib.rs  logic.rs  main.rs  mcp.rs  process_manager.rs  restate_server.rs  server.rs  utils.rs  vite.rs
py/: .gitignore  README.md  coverage.lcov  pyproject.toml
py/examples/insurance-claim-bot/: README.md  pyproject.toml  soma.yaml  utils.py
py/examples/insurance_claim_bot/: README.md  pyproject.toml  soma.yaml  utils.py
(+861 files in other folders)
