[workspace]
members = ["crates/*","crates/workspace-hack"]
resolver = "3"

metadata.crane.name = "soma"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
## Core dependencies
anyhow = "1.0.68"
async-stream = "0.3"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "^0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }
derive_builder = "0.20.2"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
humantime = "2.3.0"
paste = "1.0.15"
prost-types = "0.13"
schemars = { version = "1.0.4", features = ["uuid1", "url2", "chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9.34"
tempfile = "3.19.1"
thiserror = "2.0"
tokio-graceful-shutdown = "0.16.0"
tokio-stream = "0.1.17"
url = "2.5.4"
uuid = { version = "1.12.0", features = ["v7", "v4", "v5"] }


## Async runtime
tokio = { version = "1.43.0", default-features = false, features = [
  "rt-multi-thread",
  "signal",
  "macros",
  "parking_lot",
  "process",
  "io-std",
  "test-util",
] }

## HTTP/Web frameworks
rmcp = { path = "./../forks/modelcontextprotocol-rust-sdk/crates/rmcp", features = ["transport-sse-server"] }
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
http = "1.3.1"
hyper = { version = "=1.6.0", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["http2", "tokio"] }
reqwest = { version = "0.12.22", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
tokio-rustls = { version = "0.26.2", features = ["ring"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["cors", "add-extension"] }
utoipa = { version = "5.3.1", features = [
  "axum_extras",
  "chrono",
  "uuid",
  "debug",
] }
utoipa-axum = "0.2.0"
vite-rs = "0.2.1"
vite-rs-axum-0-8 = "0.2.1"


## Database
#this is branch ffi-null-pointer-exception, pinned to this commit 
libsql = { git = "https://github.com/trysoma/tursodatabase-libsql", rev = "25266445e3d3b76ed781d5a7acb82f1ece29c09e", features = [
  "sync",
  "replication",
] }
libsql-server = { git = "https://github.com/trysoma/tursodatabase-libsql", rev = "25266445e3d3b76ed781d5a7acb82f1ece29c09e" }
#this is branch soma, pinned to this commit
libsql_migration = { git = "https://github.com/trysoma/prashant1k99-libsql_migration", rev = "148108c50c07ad66b468cb3ad84d3ca1c5e5f0e9" }
# thsi is release tag v0.2.0-pre.12
## GRPC
prost = "0.13"
prost-build = "0.13.4"
tonic = "0.13.1"
tonic-build = "0.13.1"

## Logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "parking_lot",
  "json",
] }
## CLI
clap = { version = "4.5.44", features = ["derive"] }

## Code generation
prettyplease = "0.2.35"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
typify = "0.4.2"

## External services
restate-admin-rest-model = { git = "https://github.com/restatedev/restate", package = "restate-admin-rest-model", features = ["schema"] }
restate-types = { git = "https://github.com/restatedev/restate", package = "restate-types", features = ["schemars"] }
restate-serde-util = { git = "https://github.com/restatedev/restate", package = "restate-serde-util", features = ["schema"] }
clerk-rs = { git = "https://github.com/trysoma/clerk-rs", rev = "5b45669779e5178b870df2a7d24d780213f180bb" }


## internal crates
a2a-rs = { path = "./crates/a2a-rs" }
shared = { path = "./crates/shared" }
shared-macros = { path = "./crates/shared-macros" }
soma = { path = "./crates/soma" }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1          # Faster than default (0), with minor optimizations
debug = true           # Keep debug symbols for `dbg!`, `backtrace`, etc.
overflow-checks = true # Safe arithmetic checks (default)
incremental = true     # Enable incremental builds (default)
codegen-units = 256    # Max parallelism for fast builds
lto = false            # No link-time optimization for speed
