[project]
name = "soma-py-workspace"
version = "0.0.4"
description = "Python SDK workspace for Soma"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "types-setuptools>=75.0.0",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "examples/*",
]

[tool.uv.sources]
trysoma_sdk_core = { path = "../crates/sdk-py" }
trysoma_sdk = { workspace = true }
trysoma_api_client = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
