[package]
name = "a2a-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
derive_builder.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[build-dependencies]
typify.workspace = true
schemars.workspace = true
serde_json.workspace = true
syn.workspace = true
prettyplease.workspace = true
reqwest.workspace = true
prost-build.workspace = true
tonic-build.workspace = true
