[package]
name = "a2a-rs"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
derive_builder.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
typify.workspace = true
schemars.workspace = true
serde_json.workspace = true
syn.workspace = true
prettyplease.workspace = true
reqwest.workspace = true
prost-build.workspace = true
tonic-build.workspace = true
