[package]
name = "a2a"
version.workspace = true
edition.workspace = true

[dependencies]
a2a-core.workspace = true
anyhow.workspace = true
base64.workspace = true
shared.workspace = true
shared-macros.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
libsql.workspace = true
libsql_migration.workspace = true
async-trait.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
dashmap.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
schemars.workspace = true
tokio-stream.workspace = true
http.workspace = true
reqwest.workspace = true
url.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile.workspace = true
