[lib]
proc-macro = true

[package]
name = "bridge-macros"
version.workspace = true
edition.workspace = true

[dependencies]
quote.workspace = true
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
paste = "1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
convert_case = "0.8.0"
