[lib]
proc-macro = true

[package]
name = "bridge-macros"
version.workspace = true
edition.workspace = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
paste.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
convert_case.workspace = true
