[package]
name = "bridge"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bridge-macros.workspace = true
chrono.workspace = true
ctor = "0.6.0"
enum_dispatch = "0.3.13"
libsql.workspace = true
once_cell = "1.21.3"
paste.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
