[package]
name = "bridge"
version.workspace = true
edition.workspace = true

[features]
unit_test = ["tempfile"]
integration_test = ["tempfile", "identity/integration_test"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
ctor.workspace = true
encryption.workspace = true
enum_dispatch.workspace = true
jsonwebtoken.workspace = true
libsql.workspace = true
once_cell.workspace = true
paste.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
shared-macros.workspace = true
sha2.workspace = true
http.workspace = true
rmcp.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
arc-swap.workspace = true

[dev-dependencies]
rand.workspace = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.identity]
path = "../identity"
optional = true
