[package]
name = "encryption"
version.workspace = true
edition.workspace = true

[features]
unit_test = []
integration_test = []

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-kms.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
libsql.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
shared-macros.workspace = true
tokio.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
zeroize.workspace = true
tracing.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
