[package]
name = "inbox-a2a"
version.workspace = true
edition.workspace = true

[dependencies]
a2a.workspace = true
a2a-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
http.workspace = true
inbox.path = "../inbox"
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
