[package]
name = "inbox-a2a"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
http.workspace = true
inbox.path = "../inbox"
libsql.workspace = true
libsql_migration.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
shared-macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
typify.workspace = true
schemars.workspace = true
serde_json.workspace = true
syn.workspace = true
prettyplease.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true
