[package]
name = "sdk-core"
version.workspace = true
edition.workspace = true

[dependencies]
sdk-proto.workspace = true
shared.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
arc-swap = "1.7.1"
once_cell = "1.21.3"
