[package]
name = "sdk-core"
version.workspace = true
edition.workspace = true

[dependencies]
sdk-proto.workspace = true
shared.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
arc-swap.workspace = true
once_cell.workspace = true
tracing-subscriber.workspace = true
