[package]
name = "sdk-core"
version.workspace = true
edition.workspace = true

[dependencies]
sdk-proto.workspace = true
shared.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
uds_windows.workspace = true
