
[package]
name = "sdk-js"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, features = ["async"] }
napi-derive.workspace = true
once_cell.workspace = true
sdk-core.workspace = true
sdk-proto.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
shared.workspace = true

[build-dependencies]
napi-build.workspace = true
