[package]
name = "soma-sdk-core"
version.workspace = true
edition.workspace = true

[lib]
name = "soma_sdk_core"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
sdk-core.workspace = true
sdk-proto.workspace = true
shared.workspace = true
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
tera.workspace = true
