[package]
name = "sdk-py"
version.workspace = true
edition.workspace = true

[lib]
name = "trysoma_sdk_core"
crate-type = ["cdylib"]

[[bin]]
name = "sdk-py-generate-pyi"
path = "src/main.rs"

[dependencies]
pyo3.workspace = true
pyo3-introspection.workspace = true
sdk-core.workspace = true
sdk-proto.workspace = true
shared.workspace = true
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
tera.workspace = true
