[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "trysoma_sdk_core"
version = "0.0.5"
description = "Core native bindings for the Soma Python SDK"
requires-python = ">=3.10"
license = "MIT"
keywords = ["soma", "sdk", "agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "trysoma_sdk_core.trysoma_sdk_core"
include = ["trysoma_sdk_core/__init__.py", "trysoma_sdk_core/__init__.pyi", "trysoma_sdk_core/py.typed"]

[project.urls]
Homepage = "https://github.com/trysoma/soma"
Repository = "https://github.com/trysoma/soma"
