[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
a2a-rs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
cron_tab = { version = "0.2.11", features = ["async"] }
dotenv.workspace = true
futures.workspace = true
futures-util.workspace = true
globset.workspace = true
http.workspace = true
libsql.workspace = true
libsql_migration.workspace = true
napi = {version = "3.0.0", features = ["serde-json", "tokio_rt"]}
notify.workspace = true
paste.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rustls.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shared-macros.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
chrono.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true


[features]
default = ["sqlite", "duckdb"]
sqlite = []
duckdb = []
