[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
a2a-rs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
cron_tab.workspace = true
dotenv.workspace = true
futures.workspace = true
futures-util.workspace = true
globset.workspace = true
http.workspace = true
hyper-util.workspace = true
libsql.workspace = true
libsql_migration.workspace = true
nix.workspace = true
notify.workspace = true
paste.workspace = true
reqwest.workspace = true
rmcp.workspace = true
rustls.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shared-macros.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tokio-rustls.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
uuid.workspace = true
restate-admin-rest-model.workspace = true
restate-serde-util.workspace = true
restate-types.workspace = true
humantime.workspace = true
urlencoding.workspace = true
sdk-proto.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
chrono.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true


[features]
default = ["sqlite", "duckdb"]
sqlite = []
duckdb = []
unit_test = []
