[package]
name = "soma-api-client"
version = "0.0.1"
authors = ["juha7kukkonen@gmail.com"]
description = "Utoipa's axum bindings for seamless integration for the two"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
reqwest = { workspace = true, features = ["json", "multipart"] }
