[package]
name = "soma-api-client"
version.workspace = true
edition.workspace = true

[dependencies]
# Dependencies required by OpenAPI Generator's Rust client
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
url.workspace = true
uuid.workspace = true

[build-dependencies]
soma-api-server.workspace = true
serde_json.workspace = true
