
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "soma-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
soma.workspace = true

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
